# shmuel.tech

./: .editorconfig  .gitignore  .gitmodules  CODEOWNERS  LICENSE  Makefile  README.md  TODO.md  WITH_k8s.md  docker-compose.yml  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
docs/: index.md  mkdocs.yml
docs/getting-started/: quick-start.md
docs/services/: creating-services.md
old/: DEV_PROCESS_NOTES.md  docker-compose-dev.yaml  docker-compose-prod.yaml  go.mod  go.sum  package-lock.json
old/certbot_config/: Dockerfile  init-container.sh
old/codegen/: generate.go
old/codegen/sources/: configs.json
old/internal/: Dockerfile  main.go
old/internal/db/: db.go  tables.go
old/website/: package-lock.json  package.json  tailwind.config.js
scripts/: README.md  __init__.py  deploy.py  detect_changes.py  get_app_info.py  namecheap_dns.py  service_handler.py  sync_secrets.py  utils.py
services/blog/: .gitignore  .shmuel-tech.json  Dockerfile  Makefile  README.md  config.toml  fly.toml
services/dns-proxy/: .shmuel-tech.json  Dockerfile  Makefile  README.md  fly.toml  go.mod
services/main-site/: .shmuel-tech.json  Dockerfile  Makefile  fly.toml  nginx.conf
services/media/: .shmuel-tech.json  Makefile  fly.toml  go.mod
services/pg-formula/: .shmuel-tech.json  Makefile  fly.toml
services/test-service/: Dockerfile  Makefile  fly.toml  go.mod
src/argocd/: install.sh
src/terraform/: backend.tf  cluster_config.tf  config.json  dns.tf  gke.tf  locals.tf  network.tf  output.tf  secrets.tf  service_accounts.tf
(+47 files in other folders)
