[project]
name = "shmuel-tech"
version = "0.1.0"
description = "Shmuel's tech portfolio monorepo"
authors = [
    {name = "Shmuel", email = "shmuel@shmuel.tech"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
new-service = "scripts.new_service:main"

[tool.uv]
dev-dependencies = [] 