[project]
name = "shmuel-tech"
version = "0.1.0"
description = "Shmuel's tech portfolio monorepo"
authors = [
    {name = "Shmuel", email = "shmuel@shmuel.tech"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "tomli-w>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
deploy = "scripts.deploy:main"
detect-changes = "scripts.detect_changes:main"
new-service = "scripts.service_handler:main"
get-app-info = "scripts.get_app_info:main"
sync-secrets = "scripts.sync_secrets:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.uv]
package = true
dev-dependencies = []